@@ -6,11 +6,12 @@ import hotel.entity.Users;
 import hotel.mapper.UsersMap;
 import hotel.repository.UsersRepository;
 import hotel.service.UserService;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
+@Service
 public class UsersServiceImpl implements UserService {
 
     private final UsersRepository usersRepository;
@@ -40,50 +41,63 @@ public class UsersServiceImpl implements UserService {
 
     @Override
     public ResponseDto updateUser(UsersDto usersDto) {
-        Users users = UsersMap.parseToEntity(usersDto);
-        Optional<Users> optional = usersRepository.findById(users.getId());
-        if (optional.isPresent()) {
-            usersRepository.save(optional.get());
-            return ResponseDto.builder()
-                    .code(200)
-                    .success(true)
-                    .message("OK")
-                    .build();
+        Optional<Users> optional = usersRepository.findById(usersDto.getId());
+        if(optional.isPresent()){
+            Users users = optional.get();
+            users.setId(usersDto.getId() != null? usersDto.getId() : users.getId());
+            users.setFirstname(usersDto.getFirstName() != null? usersDto.getFirstName(): users.getFirstname());
+            users.setLastname(usersDto.getLastName() != null? usersDto.getLastName() : users.getLastname());
+            users.setAge(usersDto.getAge() != null? usersDto.getAge(): users.getAge());
+            users.setPhoneNumber(usersDto.getPhoneNumber() != null? usersDto.getPhoneNumber() : users.getPhoneNumber());
+            users.setEmail(usersDto.getEmail() != null? usersDto.getEmail() : users.getEmail());
+            users.setPassword(usersDto.getPassword() != null? usersDto.getPassword() : users.getPassword());
+            users.setAccount(usersDto.getAccount() != null? usersDto.getAccount() : users.getAccount());
+            users.setCreated_at(usersDto.getCreated_at() != null? usersDto.getCreated_at() : users.getCreated_at());
+            usersRepository.save(users);
+
+            return new ResponseDto(200, true, "OK", null);
         }
-        return ResponseDto.builder()
-                .code(404)
-                .success(false)
-                .message("Not working")
-                .build();
+
+        return new ResponseDto(404, false, "Not working", null);
     }
 
     @Override
     public ResponseDto deleteUser(Integer id) {
+        if (usersRepository.existsById(id)){
+            Optional<Users> optional = usersRepository.findById(id);
+            UsersDto userDto = UsersMap.parseToDto(optional.get());
 
-        return null;
+            return new ResponseDto(200, true, "OK", null);
+        }
+        return new ResponseDto(404,false, "Not working", null);
     }
 
     @Override
     public ResponseDto<List<UsersDto>> getAllUsers() {
         List<Users> users = usersRepository.findAll();
-        return users.stream()
+        List<UsersDto> usersDto = users.stream()
                 .map(u -> UsersDto.builder()
                         .id(u.getId())
-                        .firstName(u.getFirstName())
-                        .lastName(u.getLastName())
-                        .birthDate(u.getBirthDate())
+                        .firstName(u.getFirstname())
+                        .lastName(u.getLastname())
+                        .age(u.getAge())
                         .phoneNumber(u.getPhoneNumber())
                         .email(u.getEmail())
-                        .gender(u.getGender())
-                        .username(u.getUsername())
                         .password(u.getPassword())
+                        .account(u.getAccount())
+                        .created_at(u.getCreated_at())
                         .build())
-                .collect(Collectors.toList());
-        return null;
+                .toList();
+        try {
+            return new ResponseDto<>(200, true, "OK", usersDto);
+        } catch (Exception i){
+            return new ResponseDto<>(404, false, "Not working", null);
+        }
     }
 
     @Override
     public ResponseDto<UsersDto> findById(Integer id) {
-        return null;
+        Optional<Users> optional = usersRepository.findById(id);
+        return optional.map(users -> new ResponseDto<>(200, true, "OK", UsersMap.parseToDto(users))).orElseGet(() -> new ResponseDto<>(404, false, "Not working", null));
     }
 }
